# Streaming-Data-into-Lakehouse

./: .gitignore  Makefile  README.md  docker-compose.flink.yaml  docker-compose.kafka.yaml  docker-compose.lakehouse.yaml  docker-compose.postgres.yaml  main.py  pyproject.toml
docker_compose/: docker-compose.flink.yaml  docker-compose.kafka.yaml  docker-compose.lakehouse.yaml  docker-compose.trino.yaml
dockerfile/: Dockerfile.flink
docs/: avro-schema-guide.md  flink-api.md  flink-streaming-job.md  interact-with-kafka.md
docs/example_flink_jobs/: example-datastream-api.md  example-sql-api.md  example-table-api.md
pipeline/datasource/: clicks_schema.json  generate_stream_data.py  setup_datasource.py
pipeline/flink_jobs/jobs/: enrichment_job.py  session_agg_job.py  stream_join_job.py  window_agg_job.py
pipeline/flink_jobs/sink_tables/: enriched_checkouts.sql  enriched_clicks.sql  enriched_users.sql  nessie_catalog.sql
pipeline/flink_jobs/source_tables/: checkouts_source.sql  clicks_source.sql  postgres_products.sql  postgres_users.sql
pipeline/source/: checkouts_schema.json  clicks_schema.json  generate_data.py  generate_static_data.py  generate_stream_data.py  setup_datasource.py
s2lh/: README.md  dbt_project.yml
trino/catalog/: iceberg.properties
