[project]
name = "streaming-to-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-trino>=1.10.1",
    "faker>=40.5.1",
    "pandas>=3.0.1",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "sqlalchemy>=2.0.48",
]
